# receipt-splitter

./: .env.example  .gitignore  LICENSE  README.md  _config.yml  api_fastapi.py  cursor_prompt.md  index.html  prompt.txt  pyproject.toml  requirements.txt
examples/: sample_pp_api_response.json  test.py
site/: favicon_credits.html  index.html
site/css/: style.css
